--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "node-telegram-bot-api": "^0.61.0",
     "ytdl-core": "^4.11.5"
